# sequeda

./: .clocignore  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloc.sh  notes.txt
backoffice/: README.md  package-lock.json  package.json  quasar.config.js
backoffice/src/boot/: axios.ts
backoffice/src/components/: PersonalInformation.vue  contact-detail-form.vue  image-upload.vue
backoffice/src/components/organization/: org-form.vue  org-member-form.vue  org-position-form.vue
backoffice/src/components/person/: person-form.vue
backoffice/src/components/product/: product-form.vue
backoffice/src/components/shared/: bank-account-form.vue  contact-detail-form.vue  image-upload.vue  remark-form.vue
backoffice/src/layouts/: MainLayout.vue
backoffice/src/models/: auditlog.ts  bank-account.ts  contact-detail.ts  file-upload.ts  invoice.ts  orgs.ts  pagination.ts  person.ts  product.ts  shared.ts  template.ts
backoffice/src/pages/: AuditLog.vue  IndexPage.vue  PersonalInformationPage.vue
backoffice/src/pages/admin/: AdminPage.vue  AuditLog.vue
backoffice/src/pages/organization/: OrgPositionPage.vue  PersonalOrgPage.vue
backoffice/src/pages/organization/customers/: EditOrgCustomerPage.vue  NewOrgCustomerPage.vue  OrgCustomersPage.vue
backoffice/src/pages/organization/members/: EditOrgMemberPage.vue  NewOrgMemberPage.vue  OrgMembers.vue  OrgMembersPage.vue
backoffice/src/pages/organization/positions/: EditOrgPositionPage.vue  NewOrgPositionPage.vue  OrgPositionPage.vue
backoffice/src/pages/product/: EditProductPage.vue  NewProductPage.vue  ProductPage.vue
backoffice/src/router/: routes.ts
backoffice/src/stores/: auditlog.ts  geoentities.ts  org_position.ts  orgs.ts  pagination.ts  person.ts  product.ts  template.ts  uploads.ts
backoffice/src/stores/organization/: customer.ts  member.ts  orgs.ts  position.ts
libraries/common/: Cargo.toml
libraries/common/src/: exchange.rs  lib.rs
libraries/file_upload_client/: Cargo.toml
libraries/file_upload_client/src/: lib.rs
libraries/file_upload_common/: Cargo.toml
libraries/file_upload_common/src/: lib.rs
libraries/message_client/: Cargo.toml
libraries/message_client/src/: lib.rs
libraries/message_client/tests/: message_client.rs
libraries/message_common/: Cargo.toml
libraries/message_common/src/: exchange.rs  lib.rs
libraries/service_common/: Cargo.toml
libraries/service_common/src/: user_header.rs
libraries/store/: Cargo.toml
libraries/store/src/: client.rs  constants.rs  lib.rs  repository.rs
libraries/store/tests/: store.rs
libraries/template_client/: Cargo.toml
libraries/template_client/src/: lib.rs
libraries/template_common/: Cargo.toml
libraries/template_common/src/: lib.rs
migrations/: .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json
migrations/examples/: hello.js  world.js
scripts/geoentities/: .gitignore  cleanup-file.py
sequeda-docker/: .env.dev.example  .gitignore  docker-compose.dev.yml  docker-compose.yml  example_keycloak_config.json
sequeda-docker/config/audit-log/: auditlog.json
sequeda-docker/config/gateway/: auditlog-routes.yml  config.yml  customer-routes.yml  dev-routes.yml  geo-routes.yml  invoice-routes.yml  member-routes.yml  org-routes.yml  person-routes.yml  position-routes.yml  product-routes.yml  template-routes.yml  upload-routes.yml
sequeda-docker/config/migrations/2022/: 202212181928-add-position.js
sequeda-docker/config/tlsproxy-mock/: Caddyfile
service/domain/file_upload/: Cargo.toml
service/domain/file_upload/src/: file_upload.rs  main.rs
service/domain/person/: Cargo.toml
service/domain/person/src/: entity.rs  main.rs  router.rs
service/gateway/: Cargo.toml  README.md
service/gateway/src/: auth_redirect.rs  config.rs  constant.rs  main.rs  request_handler.rs
service/gateway/src/openid/: auth_redirect.rs  auth_request.rs  client.rs  mod.rs  router.rs  user.rs
service/geo_service/: Cargo.toml
service/geo_service/src/: countries-codes-filtered.csv  main.rs
service/message_broker/: Cargo.toml
service/message_broker/src/: constants.rs  main.rs
service/service_common/: Cargo.toml
service/service_common/src/: constants.rs  lib.rs  tenant.rs  user_header.rs
services/domain/audit_log/: Cargo.toml
services/domain/audit_log/src/: entity.rs  main.rs
services/domain/file_upload/: Cargo.toml
services/domain/file_upload/src/: file_upload.rs  file_upload_service.rs  main.rs  soffice.rs
services/domain/invoice/: Cargo.toml
services/domain/invoice/src/: entity.rs  main.rs  router.rs
services/domain/org/org_customer/: Cargo.toml
services/domain/org/org_customer/src/: entity.rs  main.rs  router.rs
services/domain/org/org_customer_invoice/: Cargo.toml
services/domain/org/org_member/: Cargo.toml
services/domain/org/org_member/src/: entity.rs  main.rs  router.rs
services/domain/org/org_position/: Cargo.toml
services/domain/org/org_position/src/: main.rs  position.rs  router.rs
services/domain/org/orgs/: Cargo.toml
services/domain/org_position/: Cargo.toml
services/domain/org_position/src/: main.rs  position.rs  router.rs
services/domain/organization/: Cargo.toml
services/domain/person/: Cargo.toml
services/domain/person/src/: entity.rs  main.rs  router.rs
services/domain/product/: Cargo.toml
services/domain/product/src/: entity.rs  main.rs  router.rs
services/domain/template/: Cargo.toml
services/domain/template/src/: entity.rs  main.rs  render.rs  router.rs
services/gateway/: Cargo.toml  README.md
services/gateway/src/: config.rs  constant.rs  main.rs  request_handler.rs
services/gateway/src/openid/: auth_redirect.rs  auth_request.rs  client.rs  mod.rs  reqwest_client.rs  router.rs  user.rs
services/geo_service/: Cargo.toml
services/geo_service/src/: main.rs
services/message_broker/: Cargo.toml
services/message_broker/src/: exchange_manager.rs  main.rs
services/service_common/: Cargo.toml
services/service_common/src/: common_domain_types.rs  constants.rs  file_upload_common.rs  lib.rs  user_header.rs
(+3 files in other folders)
