[workspace]
resolver = "2"

members = [
    "services/domain/person",
    "services/domain/org/org_member",
    "services/domain/org/org_customer",
    "services/domain/org/org_customer_invoice",
    "services/domain/org/org_position",
    "services/domain/org/orgs",
    "services/domain/file_upload",
    "services/domain/audit_log",
    "services/service_common",
    "services/message_broker",
    "services/geo_service",
    "services/gateway",
    "libraries/common",
    "libraries/store",
    "libraries/message_client",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
http-body-util = "0.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
bincode = "1.3.3"
tokio = "1.35.1"
uuid = "1.6.1"
mongodb = "2.8.0"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.2"
tower-http = "0.5.0"
futures-util = "0.3.29"
async-trait = "0.1.75"
dirs = "5.0.1"
tower = "0.4.13"
queue-file = "1.4.10"
reqwest = "0.11.23"
tokio-tungstenite = "0.21.0"
futures = "0.3.29"
axum-core = "0.4.1"
hyper = "1.1.0"
toml = "0.8.8"
serde_yaml = "0.9.29"
regex = "1.10.2"
hyper-rustls = "0.24.2"
rustls = "0.22.1"
openidconnect = "3.4.0"
async-redis-session-v2 = "0.2.3"
async-session = "3.0.0"
axum-sessions = "0.6.1"
axum-extra = "0.9.0"
rand = "0.8.5"
base64 = "0.21.5"
jsonwebtoken = "9.2.0"
mime_guess = "2.0.4"
multipart = "0.18.0"
tokio-util = "0.7.10"
image = "0.24.7"
hyper-util = "0.1.2"
hyper-tls = "0.6.0"
bytes = "1.5.0"

[workspace.package]
version = "0.1.0"
authors = ["Nordine Bittich"]
description = "Simple ERP"
documentation = "https://github.com/nbittich/sequeda"
rust-version = "1.74"
edition = "2021"
license = "MPL-2.0"
