[workspace]
resolver = "2"

members = [
    "services/domain/person",
    "services/domain/product",
    "services/domain/org/org_member",
    "services/domain/org/org_customer",
    "services/domain/org/org_position",
    "services/domain/org/orgs",
    "services/domain/file_upload",
    "services/domain/invoice",
    "services/domain/audit_log",
    "services/message_broker",
    "services/geo_service",
    "services/gateway",
    "libraries/message_common",
    "libraries/store",
    "libraries/service_common",
    "libraries/message_client",
    "libraries/file_upload_common",
    "libraries/file_upload_client",
    "services/domain/template",
    "libraries/template_common",
    "libraries/template_client",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
http-body-util = "0.1.2"
serde = "1.0.210"
serde_json = "1.0.128"
bincode = "1.3.3"
tokio = "1.40.0"
uuid = "1.10.0"
mongodb = "3.1.0"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.7"
tower-http = "0.6.1"
futures-util = "0.3.31"
async-trait = "0.1.83"
dirs = "5.0.1"
tower = "0.5.1"
queue-file = "1.4.10"
reqwest = "0.11"
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
axum-core = "0.4.5"
hyper = "1.4.1"
toml = "0.8.19"
serde_yaml = "0.9.34+deprecated" # fixme, switched to serde_yml but we'll see if I need to fork it
serde_yml = "0.0.12"
regex = "1.11.0"
hyper-rustls = "0.27.0"
rustls = "0.23.14"
openidconnect = "3.5.0"
async-redis-session-v2 = "0.2.3"
async-session = "3.0.0"
axum-sessions = "0.6.1"
axum-extra = "0.9.4"
rand = "0.8.5"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
mime_guess = "2.0.5"
multipart = "0.18.0"
tokio-util = "0.7.12"
image = "0.25.2"
hyper-util = "0.1.9"
hyper-tls = "0.6.0"
bytes = "1.7.2"
minijinja = { version = "1.0.21", default-features = false }
minijinja-contrib = "1.0.21"
headless_chrome = "1.0.15"

[workspace.package]
version = "0.1.0"
authors = ["Nordine Bittich"]
description = "Simple ERP"
documentation = "https://github.com/nbittich/sequeda"
rust-version = "1.81"
edition = "2021"
license = "MPL-2.0"
