[package]
name = "sequeda_message_client"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace=true, features=["full"]}
tokio-tungstenite = {workspace=true}
bincode ={workspace=true}
serde = {workspace = true}
serde_json = {workspace = true}
futures-util = {workspace=true}
sequeda_common = {path = "../common"}
tracing ={workspace=true}
futures = {workspace=true}

[dev-dependencies]
tracing-subscriber ={workspace=true}
