[package]
name = "sequeda_store"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {workspace=true, features = ["v4"] }
mongodb = { workspace=true, features = ["bson-uuid-0_8", "tokio-runtime", "bson-chrono-0_4"] }
tokio = { workspace=true, features = ["full"] }
serde = { workspace=true, features = ["derive"] }
serde_json = {workspace=true}
tracing = {workspace=true}
async-trait = {workspace=true}
futures-util = {workspace=true}

[dev-dependencies]
tracing-subscriber = {workspace=true}
