[package]
name = "sequeda_gateway"
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace=true, features = ["headers"] }
hyper = { workspace=true, features = ["full"] }
tokio = { workspace=true, features = ["full"] }
serde = { workspace=true, features = ["derive"] }
serde_yaml = { workspace=true }
regex = { workspace=true }
tracing = { workspace=true }
tracing-subscriber = { workspace=true }
hyper-rustls = { workspace=true }
rustls = { workspace=true }
openidconnect = {workspace=true, default-features = false}

sequeda_service_common = {path = "../service_common"}
