[package]
name = "sequeda_gateway"
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace=true, features = ["headers"] }
hyper = { workspace=true, features = ["full"] }
tokio = { workspace=true, features = ["full"] }
serde = { workspace=true, features = ["derive"] }
serde_yaml = { workspace=true }
regex = { workspace=true }
tracing = { workspace=true }
tracing-subscriber = { workspace=true }
hyper-rustls = { workspace=true }
rustls = { workspace=true }
async-session = { workspace=true }
async-redis-session = { workspace=true }
openidconnect = {workspace=true, default-features = false}
axum-sessions = { workspace=true }
rand = {workspace= true, features = ["min_const_gen"]}
sequeda_service_common = {path = "../service_common"}
