[package]
name = "sequeda_service_common"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {workspace=true}
tracing-subscriber = {workspace = true, features=["env-filter"]}
tracing = {workspace = true}