[package]
name = "sequeda_gateway"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["multipart"] }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hyper-tls = { workspace = true, features = ["alpn"] }
bytes = { workspace = true }
#rustls = { workspace = true }
async-session = { workspace = true }
async-redis-session-v2 = { workspace = true }
openidconnect = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true, features = ["min_const_gen"] }
sequeda_service_common = { path = "../service_common" }
mongodb = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
hyper-util = { workspace = true, features = [
  "client",
  "client-legacy",
  "http1",
] }
http-body-util = { workspace = true }
tower = { workspace = true }
