[package]
name = "sequeda_audit_log"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
tower-http = { workspace = true, features = ["cors"] }
sequeda_store = { path = "../../../libraries/store" }
sequeda_message_client = { path = "../../../libraries/message_client" }
sequeda_service_common = { path = "../../service_common" }
axum-extra = { workspace = true }

