[package]
name = "sequeda_invoice"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
tower-http = { workspace = true, features = ["cors"] }
sequeda_store = { path = "../../../libraries/store" }
sequeda_service_common = { path = "../../../libraries/service_common" }
sequeda_file_upload_client = { path = "../../../libraries/file_upload_client" }
sequeda_template_client = { path = "../../../libraries/template_client" }

axum-extra = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
