[package]
name = "sequeda_template"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = { workspace = true, features = ["multipart"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
tower-http = { workspace = true, features = ["cors"] }
sequeda_store = { path = "../../../libraries/store" }
sequeda_service_common = { path = "../../../libraries/service_common" }
sequeda_template_common = { path = "../../../libraries/template_common" }
axum-extra = { workspace = true, features = ["typed-header"] }
sequeda_file_upload_client = { path = "../../../libraries/file_upload_client" }
minijinja = { workspace = true, default-features = false, features = [
  "builtins",
  "macros",
  "speedups",
  "urlencode",
] }
headless_chrome = { workspace = true }
tokio-util = { workspace = true }

mime_guess.workspace = true
